--- a/Network_anomaly_autoencoders.ipynb
+++ b/Network_anomaly_autoencoders.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "authorship_tag": "ABX9TyOknEDcqhy3Pg9/lceTs9Bh",
-      "include_colab_link": true
+      "include_colab_link": false
     },
     "kernelspec": {
       "name": "python3",
